--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main]
   pull_request:
-    branches: [ main, master ]
+    branches: [main]
 
 jobs:
   test:
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        zig-version: ['0.15.0', '0.15.1', 'master']
+        zig-version: ['0.15.0', '0.15.1']
 
     steps:
     - name: Checkout code
@@ -48,7 +48,7 @@ jobs:
       run: zig build coverage
 
     - name: Upload coverage reports
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: coverage-report-zig-${{ matrix.zig-version }}
         path: coverage/
@@ -160,7 +160,7 @@ jobs:
     name: Release Readiness Check
     runs-on: ubuntu-latest
     needs: [test, cross-platform, security]
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
 
     steps:
     - name: Checkout code
@@ -203,7 +203,7 @@ jobs:
         echo "This build has passed all quality checks and is ready for release." >> release-summary.md
 
     - name: Upload release readiness report
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: release-readiness-report
         path: |
